# ai_signuper

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.ps1  pyproject.toml
src/ai_signuper/: __init__.py  __main__.py  mail_otp.py  runtime.py
src/ai_signuper/providers/: __init__.py  base.py  grok.py
src/ai_signuper/sinks/: __init__.py  base.py  sub2api.py  txt_file.py
