[project]
name = "ai-signuper"
version = "0.1.0"
description = "AI service registration bot (currently Grok/xAI), feeding Sub2API"
readme = "README.md"
# 上限编码了 Mail.tm 在 3.14+ 上的 TLS 回归，详见 CLAUDE.md 的 Runtime gotchas。
requires-python = ">=3.12,<3.14"
dependencies = [
    "DrissionPage==4.1.0.9",
    "PyVirtualDisplay==3.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
ai-signuper = "ai_signuper.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_signuper"]

[tool.uv]
package = true
